--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.3.1
 astroid==2.4.2
+certifi==2020.12.5
+cloudinary==1.24.0
 Django==3.1.4
 django-cors-headers==3.6.0
 django-environ==0.4.5
@@ -15,5 +17,6 @@ pytz==2020.5
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
+urllib3==1.26.2
 whitenoise==5.2.0
 wrapt==1.12.1
