--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "framer-motion": "^3.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
